--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+@source "./index.html" "./src/**/*.{js,jsx,ts,tsx}";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
